Table account {
  id int [primary key]
  google_openid string
  username text //ini random generated
}

Table flashcard {
  id int [primary key]
  slug text
  title text
  category text
  total_question int
  account_id int
}
Ref: flashcard.account_id > account.id

Table problem {
  id int [primary key]
  question text
  problem  text
  flashcard_id int
}
Ref: problem.flashcard_id > flashcard.id

Table bookmark {
  id int [primary key]
  flashcard_id int
  account_id int
}
Ref: bookmark.flashcard_id > flashcard.id
Ref: bookmark.account_id > account.id